# Dropbox

./: .gitignore  Cargo.toml  Makefile  README.md
backend/: Cargo.toml  exampl.json
backend/src/: controller.rs  database.rs  main.rs  model.rs
backend/src/controller/: file_controller.rs  user_controller.rs
backend/src/database/: connection.rs  db_files.rs  db_user.rs
backend/src/database/schema/: files.rs  user.rs
backend/src/model/: file.rs  storage_client.rs  user.rs
frontend/: Cargo.toml  Dioxus.toml
frontend/assets/styling/: dashboard.css  file_input.css  login.css  main.css  navbar.css  new_dir.css  new_user.css
frontend/src/: main.rs  model.rs
frontend/src/components/: create_user.rs  file_input.rs  file_item.rs  login.rs  mod.rs  new_dir.rs
frontend/src/model/: RecordID.rs  auth.rs  file.rs  user.rs
frontend/src/views/: dashboard.rs  file.rs  login.rs  mod.rs  navbar.rs  signup.rs
