[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
surrealdb = "2.0.4"
actix-web = "4.11.0"
actix-cors = "0.7.1"
actix-multipart = "0.6.1"
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.45", features = ["full"]}
env_logger = "0.10"
rust-s3 = "0.35.1"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
