[package]
name = "frontend"
version = "0.1.0"
authors = ["Wetherish <bartikozlowski@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
reqwest = { version = "0.12.15",features = ["json"] }
serde = { version = "1.0.209", features = ["derive"] }
gloo-net = "0.4"
gloo-file = { version = "0.2", features = ["futures"] }
serde_json = "1.0"
dioxus-web = "0.6.3"
web-sys = "0.3.77"
gloo-timers = "0.3.0"

[features]
default = ["dioxus/web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

